tdf#116537: use page #s excluding empty pages when they are ignored

Since commit 3c1a343f6936f1dcefdf79a677f8c26ce29676e6,
SwDoc::CalculatePagesForPrinting expects that PageRange contains
page numbers that don't include empty pages' numbers, when the
org.openoffice.Office.Writer/Print/EmptyPages is false.

Change-Id: I4057d6e36765707affbd5f3a4507ae03f4a27171
Reviewed-on: https://gerrit.libreoffice.org/55756
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit cc46e7b9c75ddbcaaefde5f396ba76b0b866fa58)